moved relationship attributes, introduced eKeys for relation containment

--- a/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.nl1.de/de/guite/modulestudio/validation/ValidationMessages_de.properties
@@ -217,7 +217,6 @@ MostDslValidator.NameIsInvalidIdentifier=Der Name muss ein gültiger Bezeichner s
 MostDslValidator.RelationshipInheritanceMustNotIncludeDiscriminatorColumnAsField=Bitte benenne das Feld {0} um, da es für die Discriminator-Column reserviert ist, oder verändere das entsprechende Attribut.
 MostDslValidator.RelationshipInheritanceNeedsDiscriminatorColumn=Das Attribut discriminatorColumn darf nicht leer sein für Vererbungsbeziehungen.
 MostDslValidator.RelationshipInheritanceNoCyclesAllowed=Vererbungszyklen sind nicht erlaubt.
-MostDslValidator.RelationshipJoinCSelfNeedsDifferentFieldsForBothSides=Die Selbstbeziehung darf das Feld {0} nicht für sowohl Quelle als auch Ziel referenzieren.
 MostDslValidator.RelationshipJoinCustomNeedsEqualTypes=Die Felder {0} und {1} müssen den gleichen Typ und die gleiche Länge haben.
 MostDslValidator.RelationshipJoinManyToManyNeedsRefClass=Eine Viele-zu-Viele-Beziehung muss das refClass-Attribut definieren.
 MostDslValidator.RelationshipJoinManyToManyNeedsValidOrderBySourceField=Das Attribut orderByReverse zeigt auf ein ungültiges Feld der Quell-Entität.
@@ -228,8 +227,6 @@ MostDslValidator.RelationshipJoinManyToManySourceMinLimitGreaterThanMaxLimit=Die
 MostDslValidator.RelationshipJoinManyToManyTargetMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Einträge auf der Zielseite darf nicht kleiner sein als die minimale Anzahl erzwungener Einträge.
 MostDslValidator.RelationshipJoinNeedsEqualColumnAmount=Die Anzahl der Join-Columns muss gleich sein für Quell- und Ziel-Seiten der Assoziation.
 MostDslValidator.RelationshipJoinNeedsSameCascadesBetweenTwoEntities=Zwischen zwei Entitäten darf es nicht mehrere Join-Beziehungen mit Kaskadierungsoptionen geben.
-MostDslValidator.RelationshipJoinNeedsSourceAlias=Jede Join-Beziehung muss ein Quell-Alias haben.
-MostDslValidator.RelationshipJoinNeedsTargetAlias=Jede Join-Beziehung muss ein Ziel-Alias haben.
 MostDslValidator.RelationshipJoinNeedsUniqueIndexByTargetField=IndexBy-Felder müssen eindeutig sein.
 MostDslValidator.RelationshipJoinNeedsValidIndexByTargetField=Das Attribut indexBy zeigt auf ein ungültiges Feld der Ziel-Entität.
 MostDslValidator.RelationshipJoinNeedsValidSourceField=Das sourceField-Attribut muss entweder 'id' für automatischen Primärschlüssel oder eine kommaseparierte Liste von zu referenzierenden {0}-Feldern beinhalten. Beachte, dass das Trennzeichen ', ' ist, inklusive der Leertaste.
@@ -238,17 +235,20 @@ MostDslValidator.RelationshipJoinNeedsValidTargetField=Das targetField-Attribut 
 MostDslValidator.RelationshipJoinNeedsValidTargetFieldType=Das Feld {0} muss ein Integer-Feld mit einer Länge von 11 sein.
 MostDslValidator.RelationshipJoinOneToManyNeedsValidOrderByTargetField=Das Attribut orderBy zeigt auf ein ungültiges Feld der Ziel-Entität.
 MostDslValidator.RelationshipJoinOneToManyTargetMinLimitGreaterThanMaxLimit=Die maximale Anzahl erzwungener Einträge auf der Zielseite darf nicht kleiner sein als die minimale Anzahl erzwungener Einträge.
-MostDslValidator.RelationshipJoinSourceAliasesMustBeUnique=Die Quell-Aliase der Beziehung müssen eindeutig sein für alle eingehenden Beziehungen einer Entität.
-MostDslValidator.RelationshipJoinSourceAliasesMustNotBeNamedLikeField=Die Querll-Aliase der Beziehung dürfen nicht so heißen wie ein Feld der Ziel-Entität.
-MostDslValidator.RelationshipJoinSourceAliasNameMustBeLonger=Das Quell-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
-MostDslValidator.RelationshipJoinSourceAliasNameShouldBeLonger=Das Quell-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
-MostDslValidator.RelationshipJoinTargetAliasesMustBeUnique=Die Ziel-Aliase der Beziehung müssen eindeutig sein für alle ausgehenden Beziehungen einer Entität.
-MostDslValidator.RelationshipJoinTargetAliasesMustNotBeNamedLikeField=Die Ziel-Aliase der Beziehung dürfen nicht so heißen wie ein Feld der Quell-Entität.
-MostDslValidator.RelationshipJoinTargetAliasNameMustBeLonger=Das Ziel-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
-MostDslValidator.RelationshipJoinTargetAliasNameShouldBeLonger=Das Ziel-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
+MostDslValidator.RelationshipJoinSelfNeedsDifferentFieldsForBothSides=Die Selbstbeziehung darf das Feld {0} nicht für sowohl Quelle als auch Ziel referenzieren.
 MostDslValidator.RelationshipNeedsApplication=Die Beziehung muss einer Anwendung zugewiesen werden.
-MostDslValidator.RelationshipNeedsSourceEntity=Jede Beziehung muss eine Quell-Entität haben.
-MostDslValidator.RelationshipNeedsTargetEntity=Jede Beziehung muss eine Ziel-Entität haben.
+MostDslValidator.RelationshipNeedsSourceAlias=Jede Beziehung muss ein Quell-Alias haben.
+MostDslValidator.RelationshipNeedsSourceDataObject=Jede Beziehung muss ein Quell-Datenobjekt haben.
+MostDslValidator.RelationshipNeedsTargetAlias=Jede Beziehung muss ein Ziel-Alias haben.
+MostDslValidator.RelationshipNeedsTargetDataObject=Jede Beziehung muss ein Ziel-Datenobjekt haben.
+MostDslValidator.RelationshipSourceAliasesMustBeUnique=Die Quell-Aliase der Beziehung müssen eindeutig sein für alle eingehenden Beziehungen einer Entität.
+MostDslValidator.RelationshipSourceAliasesMustNotBeNamedLikeField=Die Querll-Aliase der Beziehung dürfen nicht so heißen wie ein Feld der Ziel-Entität.
+MostDslValidator.RelationshipSourceAliasNameMustBeLonger=Das Quell-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
+MostDslValidator.RelationshipSourceAliasNameShouldBeLonger=Das Quell-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
+MostDslValidator.RelationshipTargetAliasesMustBeUnique=Die Ziel-Aliase der Beziehung müssen eindeutig sein für alle ausgehenden Beziehungen einer Entität.
+MostDslValidator.RelationshipTargetAliasesMustNotBeNamedLikeField=Die Ziel-Aliase der Beziehung dürfen nicht so heißen wie ein Feld der Quell-Entität.
+MostDslValidator.RelationshipTargetAliasNameMustBeLonger=Das Ziel-Alias der Beziehung muss eine Länge von mindestens zwei Zeichen haben.
+MostDslValidator.RelationshipTargetAliasNameShouldBeLonger=Das Ziel-Alias der Beziehung sollte eine Länge von mindestens vier Zeichen haben.
 MostDslValidator.SettingsContainerNeedsApplication=Einstellungen müssen einer Anwendung zugewiesen werden.
 MostDslValidator.SettingsContainerDetailBlockWithoutFinder=Der Detailblock benötigt externen Controller und Finder-Komponente.
 MostDslValidator.SettingsContainerDetailContentTypeWithoutFinder=Det Detail-ContentType benötigt externen Controller und Finder-Komponente.
