introduced embedded textual editor

--- a/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -44,6 +44,7 @@ directEditEntityFieldLabel=Entitätenfeld Label
 directEditNameAndValue=Name und Wert
 toolPreventCompartmentDeletion=Löschung von Compartments verhindern
 toolDeleteEntitiesWithRelationships=Entitäten mit Beziehungen löschen
+toolEditWithTextualEditor=Mit textuellem Editor bearbeiten
 toolOneToOneAliases=Eins zu eins Quell- und Ziel-Aliase
 toolOneToManyAliases=Eins zu viele Quell- und Ziel-Aliase
 toolManyToOneAliases=Viele zu eins Quell- und Ziel-Aliase
