raised dep versions

--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -20,6 +20,7 @@ command.quickoutline.tooltip = Schnellstruktur öffnen
 command.validate.description = Ausführliche Validierung starten
 command.validate.name = Validieren
 command.validate.tooltip = Ausführliche Validierung starten
+content.type.mostdsl = Most DSL Datei
 page.name.refactoring = Refaktorisierung
 page.name.compiler = Compiler
 viewer.label = Most DSL Vergleich
