added possibility to open textual editor from dashboard view or main menu

--- a/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/commands/messages_de.properties
@@ -49,3 +49,4 @@ ImportModelHandler_SelectInputFile=Eingabedatei wählen
 ImportModelHandler_ErrorDuringImport=Fehler beim Import
 ImportModelHandler_AnErrorOccurredDuringImport=Während des Imports ist ein Fehler aufgetreten.
 ImportModelHandler_PleaseSelectMostappFile=Bitte wähle eine mostapp-Datei.
+OpenTextEditorHandler_Failed=Fehler beim Öffnen der Modelldatei.
