--- a/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/views/messages_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/de/guite/modulestudio/ui/views/messages_de.properties
@@ -5,7 +5,7 @@ DashboardView_NewApp=Neue App
 DashboardView_CreateNewApplication=Eine neue Anwendung erstellen
 DashboardView_OpenProject=Projekt öffnen
 DashboardView_OpenExistingProject=Ein bestehendes Modellprojekt öffnen
-DashboardView_ImportModel=Modell importieren
-DashboardView_ImportModelFile=Eine bestehende Modelldatei importieren
-DashboardView_DiagramEditor=Diagramm-Editor
-DashboardView_DisplayDiagramEditor=Den Diagramm-Editor anzeigen
+DashboardView_DiagramEditor=Diagrammeditor
+DashboardView_DisplayDiagramEditor=Den Diagrammeditor anzeigen
+DashboardView_TextEditor=Texteditor
+DashboardView_DisplayTextEditor=Den Texteditor anzeigen
