--- a/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.ui.nl1.de/plugin_de.properties
@@ -45,7 +45,10 @@ command.window.submenu.views.mnemonic=V
 command.window.submenu.views.description=Unterschiedliche zusätzliche Ansichten
 command.window.opendiagrameditor.name=Diagramm öffnen
 command.window.opendiagrameditor.mnemonic=D
-command.window.opendiagrameditor.description=Den Diagramm-Editor anzeigen
+command.window.opendiagrameditor.description=Den Diagrammeditor anzeigen
+command.window.opentexteditor.name=Texteditor öffnen
+command.window.opentexteditor.mnemonic=T
+command.window.opentexteditor.description=Den Texteditor anzeigen
 command.window.opendashboardview.name=Dashboard öffnen
 command.window.opendashboardview.mnemonic=D
 command.window.opendashboardview.description=Die Dashboard View anzeigen
