reuse fields for modvars, unify datetime, date and time fields

--- a/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.edit.nl1.de/plugin_de.properties
@@ -20,30 +20,28 @@ _UI_ReferredApplication_type = Referenzierte Anwendung
 _UI_DataObject_type = Datenobjekt
 _UI_MappedSuperClass_type = Gemappte Oberklasse
 _UI_Entity_type = Entität
-_UI_EntityField_type = Entitäts-Feld
 _UI_DerivedField_type = Abgeleitetes Feld
 _UI_CalculatedField_type = Kalkuliertes Feld
-_UI_BooleanField_type = Boolean-Feld
+_UI_BooleanField_type = Boolesches
 _UI_LengthField_type = Feld mit Länge
-_UI_AbstractIntegerField_type = Abstraktes Integer-Feld
-_UI_IntegerField_type = Integer-Feld
-_UI_DecimalField_type = Dezimal-Feld
-_UI_AbstractStringField_type = Abstraktes String-Feld
-_UI_StringField_type = String-Feld
-_UI_TextField_type = Text-Feld
-_UI_UserField_type = Benutzer-Feld
-_UI_EmailField_type = E-Mail-Feld
-_UI_UrlField_type = URL-Feld
-_UI_UploadField_type = Upload-Feld
-_UI_ListField_type = Listen-Feld
-_UI_ListFieldItem_type = Listen-Eintrag
-_UI_ArrayField_type = Array-Feld
-_UI_ObjectField_type = Objekt-Feld
-_UI_AbstractDateField_type = Abstraktes Datums-Feld
-_UI_DatetimeField_type = Zeitstempel-Feld
-_UI_DateField_type = Datums-Feld
-_UI_TimeField_type = Zeit-Feld
-_UI_FloatField_type = Float-Feld
+_UI_AbstractIntegerField_type = Abstrakter Integer
+_UI_IntegerField_type = Ganzzahl
+_UI_DecimalField_type = Dezimalzahl
+_UI_AbstractStringField_type = Abstrakter String
+_UI_StringField_type = String
+_UI_TextField_type = Text
+_UI_UserField_type = Benutzer
+_UI_EmailField_type = E-Mail
+_UI_UrlField_type = URL
+_UI_UploadField_type = Upload
+_UI_ListField_type = Liste
+_UI_ListFieldItem_type = Listeneintrag
+_UI_ArrayField_type = Array
+_UI_ObjectField_type = Objekt
+_UI_DatetimeField_type = Datum und Zeit
+_UI_DateField_type = Datum
+_UI_TimeField_type = Zeit
+_UI_FloatField_type = Fließkommazahl
 _UI_EntityIndex_type = Entitäts-Index
 _UI_EntityIndexItem_type = Index-Eintrag
 _UI_Relationship_type = Beziehung
@@ -190,7 +188,7 @@ _UI_ReferredApplication_dependencyType_description = Die Art von Abhängigkeit, d
 _UI_DataObject_application_feature = Anwendung
 _UI_DataObject_application_description = Referenz zur enthaltenden Anwendung.
 _UI_DataObject_fields_feature = Felder
-_UI_DataObject_fields_description = Liste der Felder, die in diesem Datenobjekt enthalten sind.
+_UI_DataObject_fields_description = Liste der in diesem Datenobjekt enthaltenen Felder.
 _UI_Entity_nameMultiple_feature = Name Mehrzahl
 _UI_Entity_nameMultiple_description = Pluralform des Entitätsnamens.
 _UI_Entity_displayPattern_feature = Anzeigemuster
@@ -251,10 +249,12 @@ _UI_Entity_uiHooksProvider_feature = UI Hooks Provider
 _UI_Entity_uiHooksProvider_description = Ob ein UI Hooks Provider generiert werden soll oder nicht.
 _UI_Entity_actions_feature = Actions
 _UI_Entity_actions_description = Liste der in diesem Entity Controller enthaltenen Aktionen.
-_UI_EntityField_entity_feature = Entität
-_UI_EntityField_entity_description = Entität, die dieses Feld enthält.
-_UI_EntityField_displayType_feature = Anzeige-Typ
-_UI_EntityField_displayType_description = Die Anzeige-Einstellung für dieses Feld.
+_UI_Field_entity_feature = Entität
+_UI_Field_entity_description = Entität, die dieses Feld enthält.
+_UI_Field_varContainer_feature = Var Container
+_UI_Field_varContainer_description = Variablen-Container, der dieses Feld enthält.
+_UI_Field_displayType_feature = Anzeige-Typ
+_UI_Field_displayType_description = Die Anzeige-Einstellung für dieses Feld.
 _UI_DerivedField_dbName_feature = DB Name
 _UI_DerivedField_dbName_description = Name der durch dieses Feld repräsentierten Datenbankspalte - verwendet per Standard den Feldnamen.
 _UI_DerivedField_defaultValue_feature = Standardwert
@@ -431,28 +431,52 @@ _UI_ArrayField_min_feature = Min
 _UI_ArrayField_min_description = Minimale Anzahl von Einträgen, deren Vorhandensein erzwungen wird. Muss zusammen mit max verwendet werden.
 _UI_ArrayField_max_feature = Max
 _UI_ArrayField_max_description = Maximale Anzahl von Einträgen, deren Vorhandensein erzwungen wird. Muss zusammen mit min verwendet werden.
-_UI_AbstractDateField_past_feature = Vergangenheit
-_UI_AbstractDateField_past_description = Ob dieser Wert in der Vergangenheit liegen muss oder nicht.
-_UI_AbstractDateField_future_feature = Zukunft
-_UI_AbstractDateField_future_description = Ob dieser Zeitstempel in der Zukunft liegen muss oder nicht.
-_UI_AbstractDateField_timestampable_feature = Timestampable
-_UI_AbstractDateField_timestampable_description = Timestampable Trigger-Art.
-_UI_AbstractDateField_timestampableChangeTriggerField_feature = Timestampable Change Trigger Feld
-_UI_AbstractDateField_timestampableChangeTriggerField_description = Timestampable Change Trigger Feldname.
-_UI_AbstractDateField_timestampableChangeTriggerValue_feature = Timestampable Change Trigger Wert
-_UI_AbstractDateField_timestampableChangeTriggerValue_description = Timestampable Change Trigger Feldwert.
-_UI_AbstractDateField_validatorAddition_feature = Validierung Zusatz
-_UI_AbstractDateField_validatorAddition_description = Zusätzliche Validierungsregel ohne die Asset-Annotation.
+_UI_DatetimeField_components_feature = Komponenten
+_UI_DatetimeField_components_description = Welche Datums-/Zeitkomponenten aktiviert sind.
+_UI_DatetimeField_past_feature Vergangenheit
+_UI_DatetimeField_past_description = Ob dieser Wert in der Vergangenheit liegen muss oder nicht.
+_UI_DatetimeField_future_feature = Zukunft
+_UI_DatetimeField_future_description = Ob dieser Wert in der Zukunft liegen muss oder nicht.
 _UI_DatetimeField_startDate_feature = Startdatum
 _UI_DatetimeField_startDate_description = Ob dieses Feld als ein Startdatum behandelt werden soll.
 _UI_DatetimeField_endDate_feature = Enddatum
 _UI_DatetimeField_endDate_description = Ob dieses Feld als ein Enddatum behandelt werden soll.
-_UI_DatetimeField_version_feature = Version
-_UI_DatetimeField_version_description = Ob dieses Feld die Version der Entität speichert oder nicht.
+_UI_DatetimeField_timestampable_feature = Timestampable
+_UI_DatetimeField_timestampable_description = Timestampable Trigger-Art.
+_UI_DatetimeField_timestampableChangeTriggerField_feature = Timestampable Change Trigger Feld
+_UI_DatetimeField_timestampableChangeTriggerField_description = Timestampable change trigger Feldname.
+_UI_DatetimeField_timestampableChangeTriggerValue_feature = Timestampable Change Trigger Wert
+_UI_DatetimeField_timestampableChangeTriggerValue_description = Timestampable change trigger Feldwert.
+_UI_DatetimeField_validatorAddition_feature = Validierung Zusatz
+_UI_DatetimeField_validatorAddition_description = Zusätzliche Validierungsregel ohne die Asset-Annotation.
+_UI_DateField_past_feature = Vergangenheit
+_UI_DateField_past_description = Ob dieser Wert in der Vergangenheit liegen muss oder nicht.
+_UI_DateField_future_feature = Zukunft
+_UI_DateField_future_description = Ob dieser Wert in der Zukunft liegen muss oder nicht.
 _UI_DateField_startDate_feature = Startdatum
 _UI_DateField_startDate_description = Ob dieses Feld als ein Startdatum behandelt werden soll.
 _UI_DateField_endDate_feature = Enddatum
 _UI_DateField_endDate_description = Ob dieses Feld als ein Enddatum behandelt werden soll.
+_UI_DateField_timestampable_feature = Timestampable
+_UI_DateField_timestampable_description = Timestampable Trigger-Art.
+_UI_DateField_timestampableChangeTriggerField_feature = Timestampable Change Trigger Feld
+_UI_DateField_timestampableChangeTriggerField_description = Timestampable change trigger Feldname.
+_UI_DateField_timestampableChangeTriggerValue_feature = Timestampable Change Trigger Wert
+_UI_DateField_timestampableChangeTriggerValue_description = Timestampable change trigger Feldwert.
+_UI_DateField_validatorAddition_feature = Validierung Zusatz
+_UI_DateField_validatorAddition_description = Zusätzliche Validierungsregel ohne die Asset-Annotation.
+_UI_TimeField_past_feature = Vergangenheit
+_UI_TimeField_past_description = Ob dieser Wert in der Vergangenheit liegen muss oder nicht.
+_UI_TimeField_future_feature = Zukunft
+_UI_TimeField_future_description = Ob dieser Wert in der Zukunft liegen muss oder nicht.
+_UI_TimeField_timestampable_feature = Timestampable
+_UI_TimeField_timestampable_description = Timestampable Trigger-Art.
+_UI_TimeField_timestampableChangeTriggerField_feature = Timestampable Change Trigger Feld
+_UI_TimeField_timestampableChangeTriggerField_description = Timestampable change trigger Feldname.
+_UI_TimeField_timestampableChangeTriggerValue_feature = Timestampable Change Trigger Wert
+_UI_TimeField_timestampableChangeTriggerValue_description = Timestampable change trigger Feldwert.
+_UI_TimeField_validatorAddition_feature = Validierung Zusatz
+_UI_TimeField_validatorAddition_description = Zusätzliche Validierungsregel ohne die Asset-Annotation.
 _UI_EntityIndex_items_feature = Einträge
 _UI_EntityIndex_items_description = Liste von Einträgen, die in diesem Index enthalten sind.
 _UI_EntityIndex_type_feature = Typ
@@ -551,6 +575,8 @@ _UI_InheritanceRelationship_discriminatorColumn_feature = Discriminator Column
 _UI_InheritanceRelationship_discriminatorColumn_description = Name des Feldes, das als Speicherplatz für den Typ der Entität agiert.
 _UI_Variables_vars_feature = Variablen
 _UI_Variables_vars_description = Liste der in diesem Container enthaltenen Variablen.
+_UI_Variables_fields_feature = Felder
+_UI_Variables_fields_description = Liste der in diesem Container enthaltenen Felder.
 _UI_Variables_application_feature = Anwendung
 _UI_Variables_application_description = Referenz zur enthaltenden Anwendung.
 _UI_Variables_composite_feature = Kombination
@@ -646,6 +672,9 @@ _UI_EntityBlameableType_CHANGE_literal = CHANGE
 _UI_UploadNamingScheme_ORIGINALWITHCOUNTER_literal = ORIGINALWITHCOUNTER
 _UI_UploadNamingScheme_RANDOMCHECKSUM_literal = RANDOMCHECKSUM
 _UI_UploadNamingScheme_FIELDNAMEWITHCOUNTER_literal = FIELDNAMEWITHCOUNTER
+_UI_DateTimeComponents_DATE_TIME_literal = DATE_TIME
+_UI_DateTimeComponents_DATE_literal = DATE
+_UI_DateTimeComponents_TIME_literal = TIME
 _UI_EntityIdentifierStrategy_NONE_literal = NONE
 _UI_EntityIdentifierStrategy_AUTO_literal = AUTO
 _UI_EntityIdentifierStrategy_SEQUENCE_literal = SEQUENCE
@@ -701,14 +730,14 @@ _UI_CascadeType_PERSIST_REMOVE_DETACH_literal = PERSIST_REMOVE_DETACH
 _UI_CascadeType_PERSIST_MERGE_DETACH_literal = PERSIST_MERGE_DETACH
 _UI_CascadeType_REMOVE_MERGE_DETACH_literal = REMOVE_MERGE_DETACH
 _UI_CascadeType_ALL_literal = ALL
-_UI_EntityFieldDisplayType_NONE_literal = NONE
-_UI_EntityFieldDisplayType_SORTING_literal = SORTING
-_UI_EntityFieldDisplayType_VIEW_literal = VIEW
-_UI_EntityFieldDisplayType_VIEW_SORTING_literal = VIEW_SORTING
-_UI_EntityFieldDisplayType_DISPLAY_literal = DISPLAY
-_UI_EntityFieldDisplayType_DISPLAY_SORTING_literal = DISPLAY_SORTING
-_UI_EntityFieldDisplayType_ALL_literal = ALL
-_UI_EntityFieldDisplayType_VIEW_DISPLAY_literal = VIEW_DISPLAY
+_UI_FieldDisplayType_NONE_literal = NONE
+_UI_FieldDisplayType_SORTING_literal = SORTING
+_UI_FieldDisplayType_VIEW_literal = VIEW
+_UI_FieldDisplayType_VIEW_SORTING_literal = VIEW_SORTING
+_UI_FieldDisplayType_DISPLAY_literal = DISPLAY
+_UI_FieldDisplayType_DISPLAY_SORTING_literal = DISPLAY_SORTING
+_UI_FieldDisplayType_VIEW_DISPLAY_literal = VIEW_DISPLAY
+_UI_FieldDisplayType_ALL_literal = ALL
 _UI_RelationAutoCompletionUsage_NONE_literal = NONE
 _UI_RelationAutoCompletionUsage_ONLY_SOURCE_SIDE_literal = ONLY_SOURCE_SIDE
 _UI_RelationAutoCompletionUsage_ONLY_TARGET_SIDE_literal = ONLY_TARGET_SIDE
