--- a/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
+++ b/bundles/de.guite.modulestudio.mostdsl.ui.nl1.de/de/guite/modulestudio/ui/quickfix/layer/messages_de.properties
@@ -1,21 +1,17 @@
 #Properties file for de.guite.modulestudio.mostdsl.ui.quickfix.layer
-MostDslQuickfixProvider.AddABooleanFieldToTheEntity=Ein Boolean-Feld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddABooleanVariableTo=Eine Boolean-Variable zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddACalculatedFieldToTheEntity=Ein berechnetes Feld zum Datenobjekt '{0}' hinzufügen
+MostDslQuickfixProvider.AddABooleanFieldTo=Ein Boolean-Feld zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddACalculatedFieldTo=Ein berechnetes Feld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddACustomActionToTheController=Eine eigene Aktion zum Controller '{0}' hinzufügen
-MostDslQuickfixProvider.AddADateFieldToTheEntity=Ein Datumsfeld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddADatetimeFieldForStoringTheVersion=Ein Zeitstempelfeld zur Speicherung der Version hinzufügen
-MostDslQuickfixProvider.AddADatetimeFieldToTheEntity=Ein Zeitstempelfeld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddADecimalFieldToTheEntity=Ein Dezimalfeld zum Datenobjekt '{0}' hinzufügen
+MostDslQuickfixProvider.AddADateFieldTo=Ein Datumsfeld zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddADatetimeFieldTo=Ein Zeitstempelfeld zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddADecimalFieldTo=Ein Dezimalfeld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddADefaultEntityOrUseTheFirstOneIfExisting=Eine Standard-Entität hinzufügen oder die erste existierende verwenden
 MostDslQuickfixProvider.AddADeleteActionToTheController=Eine Delete-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddADisplayActionToTheController=Eine Display-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddADummyNameForTheImportedApplication=Einen Dummy-Namen für die importierte Anwendung hinzufügen
 MostDslQuickfixProvider.AddADummyUriExplainingTheFormat=Eine Dummy-URI zur Erklärung des Formates hinzufügen
-MostDslQuickfixProvider.AddAFilePathVariableTo=Eine Dateipfad-Variable zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddAFloatFieldToTheEntity=Ein Fließkomma-Feld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddAListFieldToTheEntity=Ein Listenfeld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddAListVariableTo=Eine Listen-Variable zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddAFloatFieldTo=Ein Fließkomma-Feld zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddAListFieldTo=Ein Listenfeld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnEntityTo=Eine Entität zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnIndexActionToTheController=Eine Index-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddANameForThisAction=Einen Namen für diese Aktion hinzufügen
@@ -24,14 +20,12 @@ MostDslQuickfixProvider.AddANameForThisContainer=Einen Namen für diesen Containe
 MostDslQuickfixProvider.AddANameForThisDataObject=Einen Namen für dieses Datenobjekt hinzufügen
 MostDslQuickfixProvider.AddANameForThisField=Einen Namen für dieses Feld hinzufügen
 MostDslQuickfixProvider.AddANameForThisIndex=Einen Namen für diesen Index hinzufügen
-MostDslQuickfixProvider.AddANameForThisVariable=Einen Namen für diese Variable hinzufügen
-MostDslQuickfixProvider.AddAnArrayFieldToTheEntity=Ein Array-Feld zum Datenobjekt '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnArrayFieldTo=Ein Array-Feld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnEditActionToTheController=Eine Edit-Aktion zum Controller '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnEmailFieldToTheEntity=Ein E-Mail-Feld zum Datenobjekt '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnEmailFieldTo=Ein E-Mail-Feld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnEntityOrUseTheFirstOneIfExisting=Eine Entität hinzufügen oder die erste existierende verwenden
 MostDslQuickfixProvider.AddAnEntityToTheContainer=Eine Entität zum Container hinzufügen
-MostDslQuickfixProvider.AddAnExampleItemTo=Einen Beispieleintrag zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnExampleItemToIndexPointingToTheFirstEntityField=Einen Beispieleintrag zu '{0}' hinzufügen, der auf das erste Feld in der Entität zeigt
+MostDslQuickfixProvider.AddAnExampleItemToIndexPointingToTheFirstField=Einen Beispieleintrag zu '{0}' hinzufügen, der auf das erste Feld zeigt
 MostDslQuickfixProvider.AddAnExampleListItemTo=Einen Beispiel-Listeneintrag zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnExampleOperandTo=Einen Beispiel-Operanden zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAnInitialMaximumVersionForThisApplicationImport=Eine initiale maximale Version 1.1.0 für diesen Anwendungsimport hinzufügen
@@ -39,29 +33,25 @@ MostDslQuickfixProvider.AddAnInitialMinimumVersionForThisApplicationImport=Eine 
 MostDslQuickfixProvider.AddAnInitialVersionForThisApplication=Eine initiale Version 1.1.0 für diese Anwendung hinzufügen
 MostDslQuickfixProvider.AddAnInputFieldToTheSubContainer=Ein Eingabefeld zum Sub-Container hinzufügen
 MostDslQuickfixProvider.AddAnIntegerFieldForStoringTheVersion=Ein Ganzzahl-Feld zur Speicherung der Version hinzufügen
-MostDslQuickfixProvider.AddAnIntegerFieldToTheEntity=Ein Ganzzahl-Feld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnIntegerVariableTo=Eine Integer-Variable zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnObjectFieldToTheEntity=Ein Objektfeld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnUploadFieldToTheEntity=Ein Uploadfeld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddAnUrlFieldToTheEntity=Ein URL-Feld zum Datenobjekt '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnIntegerFieldTo=Ein Ganzzahl-Feld zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnObjectFieldTo=Ein Objektfeld zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnUploadFieldTo=Ein Uploadfeld zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddAnUrlFieldTo=Ein URL-Feld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAPluralNameForThisEntity=Einen Mehrfachnamen für diese Entität hinzufügen
 MostDslQuickfixProvider.AddAPrefixForThisApplication=Ein Präfix für diese Anwendung hinzufügen
 MostDslQuickfixProvider.AddArrayField=Ein Array-Feld hinzufügen
-MostDslQuickfixProvider.AddAStringFieldForStoringTheZipcode=Ein String-Feld zur Speicherung der Postleitzahl hinzufügen
-MostDslQuickfixProvider.AddAStringFieldToTheEntity=Ein Stringfeld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddATextFieldToTheEntity=Ein Textfeld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddATextVariableTo=Eine Text-Variable zu '{0}' hinzufügen
-MostDslQuickfixProvider.AddATimeFieldToTheEntity=Ein Zeitfeld zum Datenobjekt '{0}' hinzufügen
-MostDslQuickfixProvider.AddAUserFieldToTheEntity=Ein Benutzerfeld zum Datenobjekt '{0}' hinzufügen
+MostDslQuickfixProvider.AddAStringFieldForStoringTheZipcode=Ein Stringfeld zur Speicherung der Postleitzahl hinzufügen
+MostDslQuickfixProvider.AddAStringFieldTo=Ein Stringfeld zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddATextFieldTo=Ein Textfeld zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddATimeFieldTo=Ein Zeitfeld zu '{0}' hinzufügen
+MostDslQuickfixProvider.AddAUserFieldTo=Ein Benutzerfeld zu '{0}' hinzufügen
 MostDslQuickfixProvider.AddAuthor=Autor hinzufügen
 MostDslQuickfixProvider.AddAViewActionToTheController=Eine View-Aktion zum Controller '{0}' hinzufügen
 MostDslQuickfixProvider.AddBooleanField=Boolean-Feld hinzufügen
-MostDslQuickfixProvider.AddBoolVar=Boolean-Var hinzufügen
 MostDslQuickfixProvider.AddCalculatedField=Berechnetes Feld hinzufügen
 MostDslQuickfixProvider.AddCustomAction=Eigene Aktion hinzufügen
 MostDslQuickfixProvider.AddDateField=Datumsfeld hinzufügen
 MostDslQuickfixProvider.AddDatetimeField=Zeitstempel-Feld hinzufügen
-MostDslQuickfixProvider.AddDatetimeVersionField=Zeitstempel-Versionsfeld hinzufügen
 MostDslQuickfixProvider.AddDecimalField=Ein Dezimalfeld hinzufügen
 MostDslQuickfixProvider.AddDeleteAction=Eine Delete-Aktion hinzufügen
 MostDslQuickfixProvider.AddDisplayAction=Eine Display-Aktion hinzufügen
@@ -72,16 +62,13 @@ MostDslQuickfixProvider.AddEmailAddressOfApplicationAuthor=E-Mail-Adresse des Au
 MostDslQuickfixProvider.AddEmailField=E-Mail-Feld hinzufügen
 MostDslQuickfixProvider.AddEntity=Entität hinzufügen
 MostDslQuickfixProvider.AddExampleUri=Beispiel-URI hinzufügen
-MostDslQuickfixProvider.AddFilePathVar=Dateipfad-Variable hinzufügen
 MostDslQuickfixProvider.AddFloatField=Fließkomma-Feld hinzufügen
 MostDslQuickfixProvider.AddIndexAction=Index-Aktion hinzufügen
 MostDslQuickfixProvider.AddIndexItem=Index-Eintrag hinzufügen
 MostDslQuickfixProvider.AddIntegerField=Ganzzahl-Feld hinzufügen
 MostDslQuickfixProvider.AddIntegerVersionField=Ganzzahl-Versionsfeld hinzufügen
-MostDslQuickfixProvider.AddIntVar=Int-Var hinzufügen
 MostDslQuickfixProvider.AddListField=Listenfeld hinzufügen
 MostDslQuickfixProvider.AddListItem=Listeneintrag hinzufügen
-MostDslQuickfixProvider.AddListVar=List-Var hinzufügen
 MostDslQuickfixProvider.AddMaxVersion=Max Version hinzufügen
 MostDslQuickfixProvider.AddMinVersion=Min Version hinzufügen
 MostDslQuickfixProvider.AddMultipleName=Mehrfachname hinzufügen
@@ -96,7 +83,6 @@ MostDslQuickfixProvider.AddPrefix=Präfix hinzufügen
 MostDslQuickfixProvider.AddStandardFieldsFlag=Flag für Standardfelder hinzufügen
 MostDslQuickfixProvider.AddStringField=String-Feld hinzufügen
 MostDslQuickfixProvider.AddTextField=Text-Feld hinzufügen
-MostDslQuickfixProvider.AddTextVar=Text-Var hinzufügen
 MostDslQuickfixProvider.AddTimeField=Zeitfeld hinzufügen
 MostDslQuickfixProvider.AddUploadField=Upload-Feld hinzufügen
 MostDslQuickfixProvider.AddUrlField=URL-Feld hinzufügen
@@ -138,7 +124,7 @@ MostDslQuickfixProvider.CreateAnEntityAndAssignTheFieldToIt=Eine Entität erstell
 MostDslQuickfixProvider.CreateAnEntityAndAssignTheIndexToIt=Eine Entität erstellen und den Index zuordnen
 MostDslQuickfixProvider.CreateAnEntityIndexAndAssignTheIndexItemToIt=Einen Entitäts-Index erstellen und den Index-Eintrag zuordnen
 MostDslQuickfixProvider.CreateApplication=Anwendung erstellen
-MostDslQuickfixProvider.CreateAVarContainerAndAssignTheVariableWithIt=Einen Var-Container erstellen und die Variable zuordnen
+MostDslQuickfixProvider.CreateAVarContainerAndAssignTheFieldToIt=Einen Var-Container erstellen und das Feld zuordnen
 MostDslQuickfixProvider.CreateEntity=Entität erstellen
 MostDslQuickfixProvider.CreateIndex=Index erstellen
 MostDslQuickfixProvider.CreateVarContainer=Var-Container erstellen
@@ -177,8 +163,6 @@ MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordField=Länge des Na
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordIndex=Länge des Namens erhöhen durch Anhängen des Wortes Index
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordManager=Länge des Namens erhöhen durch Anhängen des Wortes Manager
 MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordObject=Länge des Namens erhöhen durch Anhängen des Wortes Object
-MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordOption=Länge des Namens erhöhen durch Anhängen des Wortes Option
-MostDslQuickfixProvider.IncreaseLengthOfNameByAppendingTheWordView=Länge des Namens erhöhen durch Anhängen des Wortes View
 MostDslQuickfixProvider.IncreaseLengthOfPluralNameByAppendingTheWordObjects=Länge des Mehrfachnamens erhöhen durch Anhängen des Wortes Objects
 MostDslQuickfixProvider.IncreaseLengthOfPrefix=Länge des Präfix erhöhen
 MostDslQuickfixProvider.IncreaseLengthToBecomeHigherThanScale=Länge erhöhen und höher als den Scale setzen
@@ -195,6 +179,10 @@ MostDslQuickfixProvider.LowerMinVersion=Min Version herabsetzen
 MostDslQuickfixProvider.LowerScale=Scale herabsetzen
 MostDslQuickfixProvider.MakeRelationsUnidirectional=Relationen unidirektional machen
 MostDslQuickfixProvider.NameOfImportedApplication=NameDerImportiertenAnwendung
+MostDslQuickfixProvider.ObsoleteDateTimeFieldMigrate=Veraltetes Feld migrieren
+MostDslQuickfixProvider.ObsoleteDateTimeFieldMigrateDescription=In ein Datums/Zeitfeld umwandeln
+MostDslQuickfixProvider.ObsoleteVarsMigrate=Veraltete Variablen migrieren
+MostDslQuickfixProvider.ObsoleteVarsMigrateDescription=Variablen in normale Felder umwandeln
 MostDslQuickfixProvider.RaiseLength=Länge hochsetzen
 MostDslQuickfixProvider.RaiseMaxValue=Max Wert hochsetzen
 MostDslQuickfixProvider.RaiseMaxVersion=Max Version hochsetzen
@@ -241,8 +229,6 @@ MostDslQuickfixProvider.RepairNameByRemovingForbiddenCharacters=Namen durch Entf
 MostDslQuickfixProvider.RepairNameByUsingASimilarNonReservedOne=Namen durch Verwendung eines ähnlichen, nicht reservierten reparieren
 MostDslQuickfixProvider.RepairVendorByRemovingForbiddenCharacters=Anbieter durch Entfernen nicht erlaubter Zeichen reparieren
 MostDslQuickfixProvider.ReplaceByExample=Durch Beispiel ersetzen
-MostDslQuickfixProvider.ReplaceByInteger=Durch Integer ersetzen
-MostDslQuickfixProvider.ReplaceTheDatetimeFieldByAnEquallyNamedIntegerField=Das Zeitstempelfeld '{0}' durch ein gleichnamiges Ganzzahl-Feld ersetzen
 MostDslQuickfixProvider.ReplaceWithDefaultFileExtensions=Durch Standard-Dateiendungen ersetzen
 MostDslQuickfixProvider.ReplaceWithDummyEmailAddressInCorrectFormat=Durch Dummy-E-Mail-Adresse in korrektem Format ersetzen
 MostDslQuickfixProvider.ReplaceWithDummyUrlInCorrectFormat=Durch Dummy-URL in korrektem Format ersetzen
