--- a/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
+++ b/bundles/de.guite.modulestudio.sirius.design.nl1.de/OSGI-INF/l10n/bundle_de.properties
@@ -32,7 +32,6 @@ viewpointMostApp=ModuleStudio-Anwendung
 directEditNameOnly=Nur Name
 directEditNameAndMultiple=Name einfach und mehrfach
 directEditEntityFieldLabel=Entitätenfeld Label
-directEditNameAndValue=Name und Wert
 toolPreventCompartmentDeletion=Löschung von Compartments verhindern
 toolDeleteEntitiesWithRelationships=Entitäten mit Beziehungen löschen
 toolEditWithTextualEditor=Mit textuellem Editor bearbeiten
@@ -46,9 +45,6 @@ toolDropFields=Felder fallen lassen
 toolChangeFieldPosition=Feldposition verändern
 toolDropIndexes=Indexe fallen lassen
 toolDropActions=Aktionen fallen lassen
-toolVariableTypes=Variablen-Typen
-toolDropVariables=Variablen fallen lassen
-toolChangeVarPosition=Change var position
 
 sectionMainTools=Hauptwerkzeuge
 sectionDataObjects=Datenobjekte
@@ -61,7 +57,6 @@ sectionRelationshipAdditions=Beziehungen-Extras
 sectionActions=Aktionen
 sectionControllerAdditions=Controller-Extras
 sectionVariables=Variablen
-sectionVarAdditions=Var-Extras
 
 elemSuperclass=Oberklasse
 elemSuperclassFields=Oberklasse Felder
@@ -72,7 +67,7 @@ elemEntityField=Entität Feld
 elemSettings=Einstellungen
 elemSettingsContainer=Einstellungscontainer
 elemField=Feld
-elemBoolean=Bool'sches
+elemBoolean=Boolesches
 elemInteger=Ganzzahl
 elemDecimal=Dezimalzahl
 elemString=Zeichenfolge
@@ -84,9 +79,7 @@ elemList=Liste
 elemUser=Benutzer
 elemArray=Array
 elemObject=Objekt
-elemDatetime=Zeitstempel
-elemDate=Datum
-elemTime=Zeit
+elemDatetime=Datum/Zeit
 elemFloat=Fließkommazahl
 elemIndexes=Indexe
 elemEntityIndex=Entität Index
@@ -112,4 +105,4 @@ elemDelete=Löschen
 elemCustom=Eigene
 elemVarContainer=Var-Container
 elemVariable=Variable
-elemFilePath=Dateipfad
+elemVariableField=Feld
